--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
@@ -89,5 +89,7 @@ NODE_XML_SCHEMA_DISPLAY_NAME=XML Schemas
 WORKSHEET_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_MESSAGE=Der generierte Code wurde in der Zwischenablage bereitgestellt.
-PREF_DISCOVER_PLSQL_GENERATORS_LABEL=PL/SQL Generatoren &erkennen:
-PREF_DISCOVER_PLSQL_GENERATORS_HINT=Ist diese Option aktiviert, dann werden nach Betätigen der Aktualisieren Schaltfläche PL/SQL Generators in der Datenbank gesucht. Anonsten wird der Suchprozess verzögert bis der Ordner geöffnet wird.
+PREF_DISCOVER_DB_SERVER_GENERATORS_LABEL=Datenbank Server Generatoren &erkennen:
+PREF_DISCOVER_DB_SERVER_GENERATORS_HINT=Ist diese Option aktiviert, dann werden nach Betätigen der Aktualisieren Schaltfläche Generatoren in der Datenbank gesucht. Anonsten wird der Suchprozess verzögert bis der Ordner geöffnet wird.
+PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Client Generator Beispiele:
+PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=Ist diese Option aktiviert, dann werden die Generatoren "Hello World" und "1:1 View" angezeigt.
