replace OBJECT_TYPE/OBJECT_NAME with NODE_ID

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
@@ -20,6 +20,8 @@ DIALOG_TITLE=oddgen
 DIALOG_GENERATE_TO_WORKSHEET_BUTTON=In Arbeitsblatt generieren
 DIALOG_GENERATE_TO_CLIPBOARD_BUTTON=In Zwischenablage generieren
 DIALOG_CANCEL_BUTTON=Abbrechen
+DIALOG_NODE_ID_PARAM=Knoten Identifikator
+
 DIALOG_OBJECT_TYPE_PARAM=Objekttyp
 DIALOG_OBJECT_NAME_PARAM=Objektname
 NODE_TABLE_DISPLAY_NAME=Tabellen
