Implements bulk generate feature for database server generators
to fix #47, however the larger the anonymous PL/SQL block gets the more
time the Oracle Database needs to parse it. The execution time is less
than a second for 7910 nodes but to parse the generated PL/SQL block it
takes more than 10 seconds. To improve the runtime and reduce the
resource consumption the nodes have to be passed as data and not as
code.

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
@@ -91,7 +91,7 @@ NODE_XML_SCHEMA_DISPLAY_NAME=XML Schemas
 WORKSHEET_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_MESSAGE=Der generierte Code wurde in der Zwischenablage bereitgestellt.
-PREF_DISCOVER_DB_SERVER_GENERATORS_LABEL=Datenbank Server Generatoren &erkennen:
-PREF_DISCOVER_DB_SERVER_GENERATORS_HINT=Ist diese Option aktiviert, dann werden nach Betätigen der Aktualisieren Schaltfläche Generatoren in der Datenbank gesucht. Anonsten wird der Suchprozess verzögert bis der Ordner geöffnet wird.
+PREF_BULK_PROCESS_LABEL=&Mengenverarbeitung:
+PREF_BULK_PROCESS_HINT=Ist diese Option aktiviert, dann wird ein anonymer PL/SQL Block an den Datenbank-Server gesendet, um das Ergebnis für alle ausgewählten Knoten zu generieren.
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Client Generator Beispiele:
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=Ist diese Option aktiviert, dann werden die Generatoren "Hello World" und "1:1 View" angezeigt.
