--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_fr.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_fr.properties
@@ -27,7 +27,7 @@ NODE_VIEW_DISPLAY_NAME=Vues
 WORKSHEET_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_MESSAGE=Code généré à votre presse-papiers.
-PREF_DISCOVER_DB_SERVER_GENERATORS_LABEL=&Découvrez générateurs de serveur de base de données:
-PREF_DISCOVER_DB_SERVER_GENERATORS_HINT=Si cette option est activée, les générateurs seront recherchés dans la base de données en cliquant sur le bouton Rafraîchir. Anon, le processus de recherche est retardée jusqu'à ce que le dossier est ouvert.
+PREF_BULK_PROCESS_LABEL=&Processus en vrac:
+PREF_BULK_PROCESS_HINT=Si cette option est activée, un bloc PL/SQL anonyme est envoyé au serveur de base de données pour générer le résultat pour tous les noeuds sélectionnés.
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Client generator examples:
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=Si cette option est activée, les générateurs "Hello World"" et "1:1 View" sont indiqués.
