--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_it.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_it.properties
@@ -27,7 +27,7 @@ NODE_VIEW_DISPLAY_NAME=Viste
 WORKSHEET_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_TITLE=oddgen
 MESSAGE_DIALOG_CONFIRM_GENERATE_TO_CLIPBOARD_MESSAGE=Il codice generato è stato fornito negli appunti.
-PREF_DISCOVER_DB_SERVER_GENERATORS_LABEL=&Scopri server di database generatori
-PREF_DISCOVER_DB_SERVER_GENERATORS_HINT=Se selezionato, generatori vengono immediatamente scoperti quando si preme il pulsante di aggiornamento, altrimenti il processo di rilevamento viene ritardato fino a quando si apre la cartella.
+PREF_BULK_PROCESS_LABEL=Processo &Bulk:
+PREF_BULK_PROCESS_HINT=Se selezionato, un blocco PL/SQL anonimo viene inviato al server di database per generare il risultato per tutti i nodi selezionati.
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Esempi generatore cliente:
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=Se selezionato, i generatori "Hello World " e "1:1 View" sono mostrati.
