Add "New" context menu with template options for issue #43
Ensure template generators are not identified as common oddgen
generators. Templates are just an early draft.

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
@@ -13,6 +13,10 @@ CLIENT_GEN_NODE_SHORT_LABEL=Client
 CLIENT_GEN_NODE_LONG_LABEL=Client Generatoren
 DBSERVER_GEN_NODE_SHORT_LABEL=DB Server
 DBSERVER_GEN_NODE_LONG_LABEL=Datenbank Server Generatoren
+CTX_MENU_NEW_LABEL=&Neu
+CTX_MENU_NEW_PLSQL_GENERATOR_LABEL=&PL/SQL Generator...
+CTX_MENU_NEW_XTEND_PLUGIN_LABEL=&Xtend Generator...
+CTX_MENU_NEW_XTEND_SQLDEV_EXTENSION_LABEL=&SQL Developer extension...
 CTX_MENU_GEN_TO_WORKSHEET_LABEL=In Arbeitsblatt generieren
 CTX_MENU_GEN_TO_CLIPBOARD_LABEL=In Zwischenablage generieren
 CTX_MENU_GEN_DIALOG_LABEL=Generiere...
