--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_fr.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_fr.properties
@@ -13,6 +13,10 @@ CLIENT_GEN_NODE_SHORT_LABEL=Client
 CLIENT_GEN_NODE_LONG_LABEL=Générateurs de clients
 DBSERVER_GEN_NODE_SHORT_LABEL=DB serveur
 DBSERVER_GEN_NODE_LONG_LABEL=Générateurs de serveur de base de données
+CTX_MENU_NEW_LABEL=&Nouveau
+CTX_MENU_NEW_PLSQL_GENERATOR_LABEL=Générateur &PL/SQL...
+CTX_MENU_NEW_XTEND_PLUGIN_LABEL=Générateur &Xtend...
+CTX_MENU_NEW_XTEND_SQLDEV_EXTENSION_LABEL=Extension du &SQL Developer...
 CTX_MENU_GEN_TO_WORKSHEET_LABEL=Générer dans feuille de calcul
 CTX_MENU_GEN_TO_CLIPBOARD_LABEL=Générer dans presse-papier
 CTX_MENU_GEN_DIALOG_LABEL=Générer...
