--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_it.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_it.properties
@@ -13,6 +13,10 @@ CLIENT_GEN_NODE_SHORT_LABEL=Client
 CLIENT_GEN_NODE_LONG_LABEL=Client generatori
 DBSERVER_GEN_NODE_SHORT_LABEL=DB server
 DBSERVER_GEN_NODE_LONG_LABEL=Server di database generatori
+CTX_MENU_NEW_LABEL=&Nuovo
+CTX_MENU_NEW_PLSQL_GENERATOR_LABEL=Generatore &PL/SQL...
+CTX_MENU_NEW_XTEND_PLUGIN_LABEL=Generatore &Xtend...
+CTX_MENU_NEW_XTEND_SQLDEV_EXTENSION_LABEL=Estensione di &SQL Developer...
 CTX_MENU_GEN_TO_WORKSHEET_LABEL=Generare in foglio di lavoro
 CTX_MENU_GEN_TO_CLIPBOARD_LABEL=Generare negli appunti
 CTX_MENU_GEN_DIALOG_LABEL=Generare...
