Preferences for default generator folder names
Add preferences for default folder values of Client Generators and
Database Server Generators. Used for 
- generators without a get_folder implementation
- as default folder for new generators

--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_de.properties
@@ -99,3 +99,7 @@ PREF_BULK_PROCESS_LABEL=&Mengenverarbeitung:
 PREF_BULK_PROCESS_HINT=Ist diese Option aktiviert, dann wird ein anonymer PL/SQL Block an den Datenbank-Server gesendet, um das Ergebnis für alle ausgewählten Knoten zu generieren.
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Client Generator Beispiele:
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=Ist diese Option aktiviert, dann werden die Generatoren "Hello World" und "1:1 View" angezeigt.
+PREF_DEFAULT_CLIENT_GENERATORS_FOLDER_LABEL=&Standardordner für Client Generatoren
+PREF_DEFAULT_CLIENT_GENERATORS_FOLDER_HINT=Ordner für Client Generatoren, wenn die Funktion get_folder nicht implementiert ist.
+PREF_DEFAULT_DATABASE_SERVER_GENERATORS_FOLDER_LABEL=Standardordner für &Datenbankserver Generatoren
+PREF_DEFAULT_DATABASE_SERVER_GENERATORS_FOLDER_HINT=Ordner für Datenbankserver Generatoren, wenn die Funktion get_folder nicht implementiert ist.
