--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_fr.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_fr.properties
@@ -35,3 +35,7 @@ PREF_BULK_PROCESS_LABEL=&Processus en vrac:
 PREF_BULK_PROCESS_HINT=Si cette option est activée, un bloc PL/SQL anonyme est envoyé au serveur de base de données pour générer le résultat pour tous les noeuds sélectionnés.
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Client generator examples:
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=Si cette option est activée, les générateurs "Hello World"" et "1:1 View" sont indiqués.
+PREF_DEFAULT_CLIENT_GENERATORS_FOLDER_LABEL=Dossier de générateur de client par défaut
+PREF_DEFAULT_CLIENT_GENERATORS_FOLDER_HINT=&Dossier pour les générateurs de clients, si la fonction get_folder n'est pas implémentée.
+PREF_DEFAULT_DATABASE_SERVER_GENERATORS_FOLDER_LABEL=Dossier de générateur de &serveur de base de données par défaut
+PREF_DEFAULT_DATABASE_SERVER_GENERATORS_FOLDER_HINT=Dossier pour les générateurs de serveurs de base de données, si la fonction get_folder n'est pas implémentée.
