--- a/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_it.properties
+++ b/sqldev/src/main/resources/org/oddgen/sqldev/resources/OddgenResources_it.properties
@@ -35,3 +35,7 @@ PREF_BULK_PROCESS_LABEL=Processo &Bulk:
 PREF_BULK_PROCESS_HINT=Se selezionato, un blocco PL/SQL anonimo viene inviato al server di database per generare il risultato per tutti i nodi selezionati.
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_LABEL=&Esempi generatore cliente:
 PREF_SHOW_CLIENT_GENERATOR_EXAMPLES_HINT=Se selezionato, i generatori "Hello World " e "1:1 View" sono mostrati.
+PREF_DEFAULT_CLIENT_GENERATORS_FOLDER_LABEL=&Cartella generatore di client predefinito
+PREF_DEFAULT_CLIENT_GENERATORS_FOLDER_HINT=Cartella per i generatori client, se la funzione get_folder non viene implementata.
+PREF_DEFAULT_DATABASE_SERVER_GENERATORS_FOLDER_LABEL=Cartella di generatore del &server di database predefinito
+PREF_DEFAULT_DATABASE_SERVER_GENERATORS_FOLDER_HINT=Cartella per generatori di database server, se la funzione get_folder non viene implementata.
